xrpl-wasm-stdlib/xrpl-macros/tests/hash256/fail_wrong_length.stderr
error: Invalid hash: abc
 --> tests/hash256/fail_wrong_length.rs:5:14
  |
5 |     hash256!("abc");
  |              ^^^^^
